
// Copyright 2023 The Turbo Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax="proto2";
package EA.proto;
//option cc_enable_arenas = true;

enum ReverseNodeType {
    REVERSE_NODE_NORMAL = 0;
    REVERSE_NODE_DELETE = 1;
};

//--common
message CommonReverseNode
{
    optional bytes key = 1;//must
    required ReverseNodeType flag = 2;//must
    optional float weight = 3;
};
message CommonReverseList
{
    repeated CommonReverseNode reverse_nodes = 1;//must
};
